split into several mini apps

--- a/src/client/locales/de-DE.json
+++ b/src/client/locales/de-DE.json
@@ -1,3 +1,5 @@
 {
-    "helloWorld": "Hallo Welt"
+    "helloWorld": "Hallo Welt",
+    "helloAdmin": "Hallo Administrator",
+    "helloLogin": "Hallo Login"
 }
