--- a/src/client/locales/en-US.json
+++ b/src/client/locales/en-US.json
@@ -1,3 +1,5 @@
 {
-    "helloWorld": "Hello World"
+    "helloWorld": "Hello World",
+    "helloAdmin": "Hello Administrator",
+    "helloLogin": "Hello Login"
 }
