prepare password reset

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -8,5 +8,7 @@
     "forgotPassword": "Passwort vergessen",
     "emailOrPasswordIncorrect": "E-Mail oder passwort inkorrekt",
     "emailIncorrect": "E-Mail inkorrekt",
-    "passwordNotFilled": "Passwort nicht ausgefüllt"
+    "passwordNotFilled": "Passwort nicht ausgefüllt",
+    "resetPassword": "Passwort zurücksetzen",
+    "backToLogin": "Zurück zur Anmeldung"
 }
