finalize password reset

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -3,14 +3,19 @@
     "helloAdmin": "Hallo Administrator",
     "helloLogin": "Hallo Login",
     "email": "E-Mail",
-    "password": "Passwort",
-    "login": "Anmelden",
-    "forgotPassword": "Passwort vergessen",
-    "emailOrPasswordIncorrect": "E-Mail oder passwort inkorrekt",
     "emailIncorrect": "E-Mail inkorrekt",
-    "passwordNotFilled": "Passwort nicht ausgefüllt",
+    "errorWhileSendingEmail": "Fehler beim Senden der E-Mail",
+    "emailOrPasswordIncorrect": "E-Mail oder passwort inkorrekt",
+    "password": "Passwort",
+    "repeatPassword": "Passwort wiederholen",
     "resetPassword": "Passwort zurücksetzen",
-    "backToLogin": "Zurück zur Anmeldung",
+    "forgotPassword": "Passwort vergessen",
+    "passwordNotFilled": "Passwort nicht ausgefüllt",
+    "passwordsNotEqual": "Passwörter stimmen nicht überein",
+    "setPassword": "Passwort setzen",
     "passwordResetSuccess": "Es wurde eine E-Mail zum Zurücksetzen des Passwortes an {email} gesendet",
-    "errorWhileSendingEmail": "Fehler beim Senden der E-Mail"
+    "passwordSuccessfullySet": "Passwort erfolgreich zurückgesetzt",
+    "login": "Anmelden",
+    "backToLogin": "Zurück zur Anmeldung",
+    "unknownError": "Unbekannter Fehler"
 }
