--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -3,14 +3,19 @@
     "helloAdmin": "Hello Administrator",
     "helloLogin": "Hello Login",
     "email": "E-mail",
-    "password": "Password",
-    "login": "Log in",
-    "forgotPassword": "Forgot password",
-    "emailOrPasswordIncorrect": "E-mail or password incorrect",
     "emailIncorrect": "E-mail incorrect",
-    "passwordNotFilled": "Password not filled",
+    "errorWhileSendingEmail": "Error while sending e-mail",
+    "emailOrPasswordIncorrect": "E-mail or password incorrect",
+    "password": "Password",
+    "repeatPassword": "Repeat password",
     "resetPassword": "Reset password",
-    "backToLogin": "Back to log in",
+    "forgotPassword": "Forgot password",
+    "passwordNotFilled": "Password not filled",
+    "passwordsNotEqual": "Passwords are not equal",
+    "setPassword": "Set password",
     "passwordResetSuccess": "An e-mail to reset the password was sent to {email}",
-    "errorWhileSendingEmail": "Error while sending e-mail"
+    "passwordSuccessfullySet": "Password reset successfully",
+    "login": "Log in",
+    "backToLogin": "Back to log in",
+    "unknownError": "Unknown error"
 }
