add missing translation

--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -29,7 +29,7 @@
     "settings": "Settings",
     "noContent": "Currently no content",
     "addItem": "Add item",
-    "addUser": "Add user",
+    "addUsers": "Add user",
     "matriculationNumber": "Matriculation number",
     "isAdmin": "Administrator"
 }
