--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -27,7 +27,7 @@
     "settings": "Einstellungen",
     "noContent": "Zur Zeit keine Inhalte",
     "addItem": "Artikel hinzufügen",
-    "addUser": "Benutzer hinzufügen",
+    "addUsers": "Benutzer hinzufügen",
     "matriculationNumber": "Matrikelnummer",
     "isAdmin": "Administrator"
 }
