fix config exposing and add app name in frontend

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -1,5 +1,6 @@
 {
     "helloWorld": "Hallo Welt",
+    "welcome": "Willkommen bei {to}",
     "email": "E-Mail",
     "emailIncorrect": "E-Mail inkorrekt",
     "errorWhileSendingEmail": "Fehler beim Senden der E-Mail",
