first implementation of registration

--- a/src/server/locales/de-de/dict.json
+++ b/src/server/locales/de-de/dict.json
@@ -1,3 +1,4 @@
 {
-    "resetPassword": "Passwort zurücksetzen"
+    "resetPassword": "Passwort zurücksetzen",
+    "registrationEmail": "Neues Benutzerkonto bei {{ APP_NAME }}"
 }
