--- a/src/server/locales/en-us/dict.json
+++ b/src/server/locales/en-us/dict.json
@@ -1,3 +1,4 @@
 {
-    "resetPassword": "Reset password"
+    "resetPassword": "Reset password",
+    "registrationEmail": "New user account at {{ APP_NAME }}"
 }
