add missing translations, a remove button and some styling

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -30,5 +30,11 @@
     "addItem": "Artikel hinzufügen",
     "addUsers": "Benutzer hinzufügen",
     "matriculationNumber": "Matrikelnummer",
-    "isAdmin": "Administrator"
+    "isAdmin": "Administrator",
+    "firstName": "Vorname",
+    "lastName": "Nachname",
+    "nickname": "Pseudonym",
+    "isConfirmed": "Bestätigt",
+    "isActive": "Aktiv",
+    "remove": "Entfernen"
 }
