--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -17,6 +17,8 @@
     "login": "Anmelden",
     "backToLogin": "Zurück zur Anmeldung",
     "unknownError": "Unbekannter Fehler",
+    "userAlreadyExists": "Dieser Nutzer existiert bereits",
+    "notAnEmail": "Das ist keine gültige E-Mail Adresse",
     "adminArea": "Administrationsbereich",
     "navigation": "Navigation",
     "items": "Artikel",
