missing translations and styling

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -43,5 +43,6 @@
     "unlock": "Entsperren",
     "lock": "Sperren",
     "resentConfirm": "Bestätigungsmail erneut senden",
-    "edit": "Bearbeiten"
+    "edit": "Bearbeiten",
+    "logout": "Abmelden"
 }
