first version of upload and id update

--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -27,6 +27,7 @@
     "scenes": "Scenes",
     "objects": "Objects",
     "recipes": "Recipes",
+    "files": "Files",
     "settings": "Settings",
     "noContent": "Currently no content",
     "addItem": "Add item",
