--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -27,6 +27,7 @@
     "scenes": "Szenen",
     "objects": "Objekte",
     "recipes": "Rezepte",
+    "files": "Dateien",
     "settings": "Einstellungen",
     "noContent": "Zur Zeit keine Inhalte",
     "addItem": "Artikel hinzufügen",
