extend sorting and add clear button

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -41,6 +41,7 @@
     "isActive": "Aktiv",
     "remove": "Entfernen",
     "delete": "Löschen",
+    "clear": "Leeren",
     "unlock": "Entsperren",
     "lock": "Sperren",
     "resentConfirm": "Bestätigungsmail erneut senden",
