prepare graphic editor and update dependencies

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -25,7 +25,7 @@
     "users": "Benutzer",
     "lessons": "Lektionen",
     "scenes": "Szenen",
-    "objects": "Objekte",
+    "sceneObjects": "Szenenobjekte",
     "recipes": "Rezepte",
     "files": "Dateien",
     "settings": "Einstellungen",
