--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -25,7 +25,7 @@
     "users": "Users",
     "lessons": "Lessons",
     "scenes": "Scenes",
-    "objects": "Objects",
+    "sceneObjects": "Scene objects",
     "recipes": "Recipes",
     "files": "Files",
     "settings": "Settings",
