add missing translations for user registration

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -17,7 +17,8 @@
     "login": "Anmelden",
     "backToLogin": "Zurück zur Anmeldung",
     "unknownError": "Unbekannter Fehler",
-    "userAlreadyExists": "Dieser Nutzer existiert bereits",
+    "DuplicateError": "{name} existiert bereits",
+    "MissingUsernameError": "Keine E-Mail Adresse angegeben",
     "notAnEmail": "Das ist keine gültige E-Mail Adresse",
     "adminArea": "Administrationsbereich",
     "navigation": "Navigation",
