--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -17,7 +17,8 @@
     "login": "Log in",
     "backToLogin": "Back to log in",
     "unknownError": "Unknown error",
-    "userAlreadyExists": "This user already exists",
+    "DuplicateError": "{name} already exists",
+    "MissingUsernameError": "No e-mail address provided",
     "notAnEmail": "This is not a valid email address",
     "adminArea": "Administration area",
     "navigation": "Navigation",
