add missing discard translation

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -54,5 +54,6 @@
     "fileUploadAborted": "Hochladen von {name} abgebrochen",
     "notFound": "Resource konnte nicht gefunden werden",
     "errorAddingUsers": "Fehler beim Hinzufügen von Benutzern",
-    "usersAdded": "Benutzer hinzugefügt"
+    "usersAdded": "Benutzer hinzugefügt",
+    "discarded": "Änderungen an {name} verworfen"
 }
