prepare arrangement, fix several bugs and prepare for recursive rotation

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -65,5 +65,6 @@
     "save": "Speichern",
     "close": "schließen",
     "upload": "Hochladen",
-    "addSceneObject": "Szenenobjekt hinzufügen"
+    "addSceneObject": "Szenenobjekt hinzufügen",
+    "arrange": "Element in den Vordergrund bringen"
 }
