--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -65,5 +65,6 @@
     "save": "Save",
     "close": "Close",
     "upload": "Upload",
-    "addSceneObject": "Add scene object"
+    "addSceneObject": "Add scene object",
+    "arrange": "Bring element to front"
 }
