add missing translation and make button accessible on smaller windows

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -66,5 +66,6 @@
     "close": "schließen",
     "upload": "Hochladen",
     "addSceneObject": "Szenenobjekt hinzufügen",
-    "arrange": "Element in den Vordergrund bringen"
+    "arrange": "Element in den Vordergrund bringen",
+    "addScene": "Szene hinzufügen"
 }
