first version of lesson editor

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -67,5 +67,7 @@
     "upload": "Hochladen",
     "addSceneObject": "Szenenobjekt hinzufügen",
     "arrange": "Element in den Vordergrund bringen",
-    "addScene": "Szene hinzufügen"
+    "addScene": "Szene hinzufügen",
+    "addLesson": "Lektion hinzufügen",
+    "goals": "Ziele"
 }
