add translation for search

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -78,5 +78,6 @@
     "locale": "Sprache",
     "currentGameSession": "Aktuelle Lektion",
     "solvedGameSessions": "Gelöste Lektionen",
-    "general": "Allgemein"
+    "general": "Allgemein",
+    "search": "suchen..."
 }
