styling and autocomplete additions

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -81,5 +81,6 @@
     "general": "Allgemein",
     "search": "suchen...",
     "copy": "Kopieren",
-    "copyOf": "Kopie von"
+    "copyOf": "Kopie von",
+    "accessRights": "Zugriffsrechte"
 }
