--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -81,5 +81,6 @@
     "general": "General",
     "search": "search...",
     "copy": "Copy",
-    "copyOf": "Copy of"
+    "copyOf": "Copy of",
+    "accessRights": "Access Rights"
 }
