update dependencies, add play button, add missing translations, add description to lessons

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -82,5 +82,8 @@
     "search": "suchen...",
     "copy": "Kopieren",
     "copyOf": "Kopie von",
-    "accessRights": "Zugriffsrechte"
+    "accessRights": "Zugriffsrechte",
+    "description": "Beschreibung",
+    "difficulty": "Schwierigkeitsgrad",
+    "play": "Abspielen"
 }
