--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -85,5 +85,5 @@
     "accessRights": "Zugriffsrechte",
     "description": "Beschreibung",
     "difficulty": "Schwierigkeitsgrad",
-    "play": "Abspielen"
+    "play": "Spielen"
 }
