add default inventory to lecture

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -85,5 +85,6 @@
     "accessRights": "Zugriffsrechte",
     "description": "Beschreibung",
     "difficulty": "Schwierigkeitsgrad",
-    "play": "Spielen"
+    "play": "Spielen",
+    "inventory": "Inventar"
 }
