--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -85,5 +85,6 @@
     "accessRights": "Access Rights",
     "description": "Description",
     "difficulty": "Difficulty",
-    "play": "Play"
+    "play": "Play",
+    "inventory": "Inventory"
 }
