add missing translations, some styling and add placeholder for empty lesson list

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -78,6 +78,8 @@
     "locale": "Sprache",
     "currentGameSession": "Aktuelle Lektion",
     "solvedGameSessions": "Gelöste Lektionen",
+    "remainingLessons": "Ausstehende Lektionen",
+    "noLessonsYet": "Bisher keine Lektionen",
     "general": "Allgemein",
     "search": "suchen...",
     "copy": "Kopieren",
