--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -78,6 +78,8 @@
     "locale": "Language",
     "currentGameSession": "Current Lesson",
     "solvedGameSessions": "Solved Lessons",
+    "remainingLessons": "Remaining Lektionen",
+    "noLessonsYet": "No lessons yet",
     "general": "General",
     "search": "search...",
     "copy": "Copy",
