save game session in interval and permit only one session for each lesson

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -60,6 +60,7 @@
     "usersAdded": "Benutzer hinzugefügt",
     "discarded": "Änderungen an {name} verworfen",
     "saved": "Änderungen an {name} gespeichert",
+    "errorWhileSaving": "Fehler beim Speichern von {name}",
     "download": "Herunterladen",
     "collapse": "Einklappen",
     "select": "Manipulationswerkzeug",
