make items recursive and show type name on avatar

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -27,11 +27,19 @@
     "navigation": "Navigation",
     "items": "Artikel",
     "users": "Benutzer",
+    "user": "Benutzer",
     "lessons": "Lektionen",
+    "lesson": "Lektion",
     "scenes": "Szenen",
+    "scene": "Szene",
     "sceneObjects": "Szenenobjekte",
+    "sceneObject": "Szenenobjekt",
+    "actionObject": "Aktionsobjekt",
+    "clickArea": "Klickbarer Bereich",
     "recipes": "Rezepte",
     "files": "Dateien",
+    "file": "Datei",
+    "requisite": "Requisite",
     "settings": "Einstellungen",
     "noContent": "Zur Zeit keine Inhalte",
     "addItem": "Artikel hinzufügen",
