--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -27,11 +27,19 @@
     "navigation": "Navigation",
     "items": "Items",
     "users": "Users",
+    "user": "User",
     "lessons": "Lessons",
+    "lesson": "Lesson",
     "scenes": "Scenes",
+    "scene": "Scene",
     "sceneObjects": "Scene objects",
+    "sceneObject": "Scene object",
+    "actionObject": "Action object",
+    "clickArea": "Clickable area",
     "recipes": "Recipes",
     "files": "Files",
+    "file": "File",
+    "requisite": "Requisite",
     "settings": "Settings",
     "noContent": "Currently no content",
     "addItem": "Add item",
