--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -28,6 +28,7 @@
     "items": "Artikel",
     "users": "Benutzer",
     "user": "Benutzer",
+    "creator": "Ersteller",
     "lessons": "Lektionen",
     "lesson": "Lektion",
     "scenes": "Szenen",
@@ -42,6 +43,8 @@
     "requisite": "Requisite",
     "settings": "Einstellungen",
     "noContent": "Zur Zeit keine Inhalte",
+    "lastModifiedDate": "Zuletzt bearbeitet",
+    "creationDate": "Erstellt am",
     "addItem": "Artikel hinzufügen",
     "addUsers": "Benutzer hinzufügen",
     "matriculationNumber": "Matrikelnummer",
@@ -93,6 +96,9 @@
     "search": "suchen...",
     "copy": "Kopieren",
     "copyOf": "Kopie von",
+    "pin": "Anpinnen",
+    "true": "Ja",
+    "false": "Nein",
     "accessRights": "Zugriffsrechte",
     "description": "Beschreibung",
     "difficulty": "Schwierigkeitsgrad",
