--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -28,6 +28,7 @@
     "items": "Items",
     "users": "Users",
     "user": "User",
+    "creator": "Creator",
     "lessons": "Lessons",
     "lesson": "Lesson",
     "scenes": "Scenes",
@@ -42,6 +43,8 @@
     "requisite": "Requisite",
     "settings": "Settings",
     "noContent": "Currently no content",
+    "creationDate": "Created at",
+    "lastModifiedDate": "Last modified",
     "addItem": "Add item",
     "addUsers": "Add user",
     "matriculationNumber": "Matriculation number",
@@ -93,6 +96,9 @@
     "search": "search...",
     "copy": "Copy",
     "copyOf": "Copy of",
+    "pin": "Pin",
+    "true": "Yes",
+    "false": "No",
     "accessRights": "Access Rights",
     "description": "Description",
     "difficulty": "Difficulty",
