add missing translations

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -103,5 +103,7 @@
     "description": "Beschreibung",
     "difficulty": "Schwierigkeitsgrad",
     "play": "Spielen",
-    "inventory": "Inventar"
+    "inventory": "Inventar",
+    "fileType": "Dateityp",
+    "fileSize": "Dateigröße"
 }
