--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -103,5 +103,7 @@
     "description": "Description",
     "difficulty": "Difficulty",
     "play": "Play",
-    "inventory": "Inventory"
+    "inventory": "Inventory",
+    "fileType": "File type",
+    "fileSize": "File size"
 }
