add missing translation

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -105,5 +105,6 @@
     "play": "Spielen",
     "inventory": "Inventar",
     "fileType": "Dateityp",
-    "fileSize": "Dateigröße"
+    "fileSize": "Dateigröße",
+    "trash": "Mülleimer"
 }
