add restore button

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -106,5 +106,6 @@
     "inventory": "Inventar",
     "fileType": "Dateityp",
     "fileSize": "Dateigröße",
-    "trash": "Mülleimer"
+    "trash": "Mülleimer",
+    "restore": "Wiederherstelen"
 }
