--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -106,5 +106,6 @@
     "inventory": "Inventory",
     "fileType": "File type",
     "fileSize": "File size",
-    "trash": "Trash can"
+    "trash": "Trash can",
+    "restore": "Restore"
 }
