add label section

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -107,5 +107,7 @@
     "fileType": "Dateityp",
     "fileSize": "Dateigröße",
     "trash": "Mülleimer",
-    "restore": "Wiederherstelen"
+    "restore": "Wiederherstelen",
+    "labels": "Label",
+    "label": "Label"
 }
