translate default name values and add restore action to all relevant models

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -109,5 +109,8 @@
     "trash": "Mülleimer",
     "restore": "Wiederherstelen",
     "labels": "Label",
-    "label": "Label"
+    "label": "Label",
+    "newNeutral": "Neues",
+    "newMaskulin": "Neuer",
+    "newFeminin": "Neue"
 }
