add missing language strings and correct input size

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -112,5 +112,7 @@
     "label": "Label",
     "newNeutral": "Neues",
     "newMaskulin": "Neuer",
-    "newFeminin": "Neue"
+    "newFeminin": "Neue",
+    "addLabel": "Laben hinzufügen",
+    "addCertainLabel": "Label \"{label}\" hinzufügen"
 }
