add confirm to actions

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -116,5 +116,7 @@
     "addLabel": "Laben hinzufügen",
     "addCertainLabel": "Label \"{label}\" hinzufügen",
     "closeItTitle": "Ungespeicherte Änderungen",
-    "closeItQuestion": "\"{name}\" hat nicht gespeicherte Änderungen. Sollen diese wirklich verworfen werden?"
+    "closeItQuestion": "\"{name}\" hat nicht gespeicherte Änderungen. Sollen diese wirklich verworfen werden?",
+    "confirmTitle": "{type} bestätigen",
+    "confirmQuestion": "{name} wirklich {type}?"
 }
