--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -116,5 +116,7 @@
     "addLabel": "Add Label",
     "addCertainLabel": "Add Label \"{label}\"",
     "closeItTitle": "Unsaved changes",
-    "closeItQuestion": "\"{name}\" has unsaved changes. Do you really want to discard them?"
+    "closeItQuestion": "\"{name}\" has unsaved changes. Do you really want to discard them?",
+    "confirmTitle": "Confirm {type}",
+    "confirmQuestion": "Do you really want to {type} {name}?"
 }
